# ready-trader-go-2023

./: .gitignore  README.md  autotrader.json  autotrader.py  exchange.json  fill_rate_analysis.ipynb  volume_signals.txt
analysis/: fill_rate_analysis.ipynb  training_data_creation.ipynb  volume_signal_testing.ipynb
cpp/: CMakeLists.txt  Readme.md  autotrader  autotrader.cc  autotrader.h  autotrader.json  basic_autotrader  basic_autotrader.cc  basic_autotrader.h  basic_autotrader.json  basic_autotrader2  basic_autotrader2.json  basic_autotrader3  basic_autotrader3.json  exchange.json  glush.json  glush.py  main.cc  match_events.csv  score_board.csv
cpp/libs/: CMakeLists.txt
cpp/libs/ready_trader_go/: CMakeLists.txt  application.cc  application.h  autotraderapphandler.cc  autotraderapphandler.h  baseautotrader.cc  baseautotrader.h  config.h  connectivity.cc  connectivity.h  connectivitytypes.h  error.h  logging.h  protocol.cc  protocol.h  types.h
cpp/ready_trader_go/: competitor.py
py/: autotrader.json  autotrader.py  exchange.json  match_events.csv  old_code.py  old_functions.py  past_code.py  provided_autotrader.json  provided_autotrader3.json  score_board.csv
py/analysis/: model_analysis.ipynb  temp.ipynb  training_data_creation.ipynb  volume_signal_testing.ipynb
py/data/: fill_ratios.csv
py/our_last_round/: match322_score_board.csv
py/ready_trader_go/: order_book.py
py/round1/: match48_score_board.csv
py/round2/: match125_score_board.csv
tournament_results/our_last_round/: match131_score_board.csv  match417_score_board.csv  match465_score_board.csv  match489_score_board.csv
tournament_results/round1/: match152_score_board.csv
tournament_results/round2/: match191_score_board 2.csv
